# NeedleInAHaystack

./: .gitignore
.obsidian/: workspace.json
docs/: Ideas.md  Questions.md  second brain idea.md
secondBrainSrc/: .env  .env.sample  CLAUDE.md  Cargo.toml  README.md  db_setup.sh  docker-compose.yml  env.sample  env.text  init_postgres.sh  init_sqlite.sh  run_all.sh  run_demo.sh  schema.sql  setup.sh  sqlx-data.json  stop_all.sh
secondBrainSrc/.cargo/: config.toml
secondBrainSrc/.sqlx/: query-05575d215259480edc8f4c2600fa4255b09adcea20c196e14d59be0edb11daaa.json  query-586b289508a6810a858a7d40d4c27f4590a2de88dd74da7ffeebbabd7b5d083d.json  query-5b10937732b97e75ab74142d9eeaa59094bb69bbea80b2bbd6507512f20f9b2f.json  query-87c501666777309f08cc63d2b07dfc3f199ebf0828087391516f5df479bcd4d4.json  query-c4851ef56b393680917102e83711619884245d3751326afedc6620ab12841ae2.json
secondBrainSrc/common/: Cargo.toml
secondBrainSrc/common/src/: lib.rs  models.rs
secondBrainSrc/common/src/db/: general_db.rs  mod.rs
secondBrainSrc/common/src/listener/: mod.rs  window_listener.rs
secondBrainSrc/common/src/llm/: mod.rs  ollama.rs
secondBrainSrc/data/: summaries.db
secondBrainSrc/demo/: Cargo.toml  README.md  run_demo.sh
secondBrainSrc/demo/src/: llm.rs  main.rs
secondBrainSrc/learner/: Cargo.toml
secondBrainSrc/learner/src/: event_logger.rs  keylogger-old.rs  keylogger.rs  main.rs
secondBrainSrc/migrations/: 20250410000000_initial_schema.sql
secondBrainSrc/recall/: Cargo.toml
secondBrainSrc/recall/src/: fuzzy_finder.rs  main.rs  query_engine.rs  utils.rs
secondBrainSrc/src/: lib.rs  main.rs
secondBrainSrc/src/learner/: mod.rs
secondBrainSrc/src/models/: event.rs  mod.rs  summary.rs
secondBrainSrc/src/recall/: mod.rs
secondBrainSrc/src/thinker/: mod.rs
secondBrainSrc/src/utils/: app_info.rs  llm.rs  mod.rs
secondBrainSrc/thinker/: Cargo.toml
secondBrainSrc/thinker/src/: event_analyzer.rs  main.rs
secondBrainSrc/ui/: Cargo.toml  package.json  pnpm-lock.yaml
secondBrainSrc/ui/src/: main.rs
