# Cargo.toml (workspace)
[workspace]
resolver = "2"
members = [
    "common",
    "learner",
    "thinker",
    "recall",
]

[workspace.dependencies]
tokio = { version = "1.29", features = ["full", "sync"] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-trait = "0.1"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "sqlite", "chrono", "json"] }
reqwest = { version = "0.11", features = ["json"] }
