[package]
name = "activity-tracker-common"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
sqlx = { workspace = true, features = ["sqlite", "runtime-tokio-rustls", "chrono", "json"] }
reqwest = { version = "0.11", features = ["json"] }
rdev = "0.5.3"
dotenv = "0.15"
