[package]
name = "second_brain_demo"
version = "0.1.0"
edition = "2021"
description = "A second brain application demo"

[dependencies]
tokio = { version = "1.32", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1.0"
reqwest = { version = "0.11", features = ["json"] }
dotenv = "0.15"
clap = { version = "4.4", features = ["derive"] }