[package]
name = "activity-tracker-learner"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { workspace = true, features = ["sync"] } # Need to specify sync feature
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
sqlx = { workspace = true }
dotenv = "0.15"
rdev = "0.5.3"
# local dependencies
activity-tracker-common = { path = "../common" }
