[package]
name = "activity-tracker-thinker"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
sqlx = { workspace = true }
dotenv = "0.15"
# local dependencies
activity-tracker-common = { path = "../common" }
